--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 h1,
 h2,
 h3 {
-  font-family: 'Noto Serif', serif;
+  font-family: 'Noto', serif;
 }
 p,
 li {
@@ -26,8 +26,8 @@ nav {
   display: flex;
   justify-content: center;
   margin-top: 20px;
-  width: 90%;
-  margin-left: 150px;
+  width: 80%;
+  margin-left: 230px;
 }
 
 nav .links {
@@ -47,21 +47,55 @@ nav .links ul li {
   display: inline;
   margin-top: 20px;
 }
+nav .links ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 3rem; /* Increase gap */
+}
+
+nav .links ul li {
+  margin-top: 20px;
+}
+
+/* Remove link underline and color */
+nav .links ul li a {
+  text-decoration: none;
+  color: #555; /* Grey */
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  gap: 2px;
+}
+
+/* On hover - darker */
+nav .links ul li a:hover {
+  color: #000; /* Black */
+}
+
+/* Optional: cart icon size adjust */
+nav .links ul li a i {
+  font-size: 1rem;
+}
 
 .banner {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  justify-content: space-around;
+  align-items: flex-end;
+  height: auto;
   width: 90%;
+
+  margin-top: 150px;
+  margin-bottom: 100px;
   margin-left: 150px;
 }
 
 .banner-text {
-  width: 50%;
-  margin-right: 100px;
+  width: 40%;
 }
+
 .plants {
   display: flex;
   flex-direction: column;
@@ -91,6 +125,21 @@ nav .links ul li {
   justify-content: center;
   align-items: center;
 }
+.cards .item-name {
+  font-size: 22px;
+  font-weight: normal;
+}
+.cards button {
+  background-color: #e95a08;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+  font-size: 16px;
+  width: 100%;
+}
 .plants-lover {
   display: flex;
   flex-direction: row;
@@ -99,10 +148,20 @@ nav .links ul li {
   align-items: center;
   padding: 50px;
   margin-left: 150px;
+  margin-top: 50px;
 }
 .plants-lover-image {
   width: 50%;
   margin-left: 100px;
+}
+
+.plants-lover-image .overlay-img {
+  position: absolute;
+  top: -80px;
+  right: -80px;
+  width: 200px;
+  height: auto;
+  z-index: 2;
 }
 .plants-lover-text {
   width: 50%;
@@ -199,6 +258,24 @@ nav .links ul li {
 
   pointer-events: auto;
 }
+
+.deals-image-wrapper::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 20px;
+  z-index: 1;
+  transition: opacity 0.3s ease;
+}
+
+.deals-image-wrapper:hover::before {
+  opacity: 0;
+}
+
 .join-container {
   display: flex;
   background-image: url('./assets/news-letter-bg.png');
@@ -247,13 +324,14 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
   width: 80%;
   margin-left: 230px;
 }
 footer .footer-text {
   width: 30%;
   text-align: center;
+  margin: 60px 0px;
 }
 footer ul {
   list-style: none;
@@ -269,7 +347,7 @@ footer ul.social-icons {
   display: flex;
   flex-direction: row;
   gap: 16px;
-  margin: 0px 0;
+  margin: 60px 0;
   padding: 0;
 }
 
@@ -282,7 +360,7 @@ footer ul.social-icons li {
 }
 @media (max-width: 768px) {
   nav {
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
   }
@@ -291,8 +369,30 @@ footer ul.social-icons li {
     margin-left: 0;
     margin-top: 20px;
   }
-  .banner-text {
+  nav {
+    justify-content: space-between;
+    width: 100%;
+    margin: 20px auto;
+    padding: 0 20px;
+  }
+
+  nav .links ul {
+    display: flex;
+    gap: 1rem;
+  }
+
+  nav .links ul li {
     display: none;
+  }
+
+  nav .links ul li:last-child {
+    display: flex; /* show cart only */
+  }
+  .banner {
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 50px;
   }
   .banner {
     margin: 0;
@@ -300,8 +400,46 @@ footer ul.social-icons li {
     width: 100%;
     height: auto;
   }
+  .plants {
+    margin: auto;
+  }
   .cards-container {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .plants-lover {
+    flex-direction: column;
+    margin: auto;
+    padding: 20px;
+    align-items: center;
+  }
+
+  .plants-lover-image {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .plants-lover-image .overlay-img {
+    display: none;
+  }
+
+  .plants-lover-text {
+    width: 100%;
+    text-align: center;
+    margin: 20px auto 0;
+  }
+  .deals {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: auto;
+    padding: auto;
+  }
+  .deals-text {
+    width: 100%;
+    padding: 0 20px;
+    text-align: center;
+    margin-bottom: 60px;
   }
   .deals-images {
     flex-direction: column;
@@ -313,8 +451,51 @@ footer ul.social-icons li {
     gap: 20px;
     width: 100%;
   }
+  .join {
+    padding: 20px;
+    text-align: center;
+  }
+
+  .join-input-group {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .join-input-group input {
+    width: 100%;
+    padding: 10px;
+    font-size: 1rem;
+  }
+
+  .join-input-group button {
+    width: 100%;
+    padding: 10px;
+    font-size: 1rem;
+  }
   footer {
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 20px;
+    gap: 20px;
+    margin: auto;
+  }
+
+  footer ul {
+    margin: 0;
+    padding: 0;
+  }
+
+  footer .footer-text {
+    text-align: left;
+  }
+
+  footer ul,
+  footer .footer-text,
+  footer .social-icons {
+    width: 100%;
   }
 }
