--- a/styles.css
+++ b/styles.css
@@ -314,15 +314,14 @@ nav .links ul li a i {
 .join-input-group input[type='text'] {
   flex: 1;
   padding: 10px;
-
-  border-right: none;
+  border: none;
   outline: none;
   color: #222;
   background: #fff;
 }
 
 .join-input-group button {
-  border-left: none;
+  border: none;
   padding: 10px 20px;
   background: #e95a08;
   color: #fff;
